syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string phoneNumber = 3;
}

message GetUserRequest {
  string email = 1;
  string phoneNumber = 2;
}

message UserResponse {
  string email = 1;
  string phoneNumber = 2;
  string createdAt = 3;
  string updatedAt = 4;
}